nbs6 java opts updates